--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Index.cshtml
@@ -10,6 +10,10 @@
     ViewBag.User = User;
 }
 
+@{
+    ViewData["Title"] = "ვაკანსიები";
+}
+
 </style>  
 <div class="container-xxl py-5" id="Div">
     <div class="container">
