--- a/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/Create.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/Create.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="row">
-    <div class="col-md-8 offset-2">
+    <div class="col-md-8  offset-lg-3 offset-md-2 offset-lg-2">
         <p>
             <h4 class="text-center">შექმენი CV</h4>
         </p>
@@ -13,7 +13,7 @@
       
 
         <div class="row">
-            <div class="col-md-8 offset-2">
+            <div class="col-md-8  offset-lg-3 offset-md-2 offset-lg-2">
                 <form asp-action="Create" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
