fix isses a links not working

--- a/src/Hackathon_CV_Portal.Web/Views/Category/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Category/Index.cshtml
@@ -128,7 +128,7 @@ else
                             
                                 <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
                                     <div class="d-flex mb-3">
-                                        <a class="btn btn-danger me-2" asp-controller="Category" asp-action="DeleteCategory" asp-route-id="`+response+`">წაშლა</a>
+                                        <a class="btn btn-danger me-2" href="Category/DeleteCategory/ ` + response + `">წაშლა</a>
                                     </div>
                                 </div>
                         </div>
