--- a/src/Hackathon_CV_Portal.Web/Views/Location/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Location/Index.cshtml
@@ -99,8 +99,7 @@
                             <div
                             class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
                                 <div class="d-flex mb-3">
-                                    <a class="btn btn-danger me-2" asp-controller="Location" asp-action="DeleteLocation"
-                                    asp-route-id="`+ response + `">
+                                    <a class="btn btn-danger me-2" href="Location/DeleteLocation/` + response + `">
                                         <h5 class="text-white">წაშლა</h5>
                                     </a>
                                 </div>
