--- a/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/MarkUpStyle.css" />
 
+    <link runat="server" rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+    <link runat="server" rel="icon" href="favicon.ico" type="image/ico"/>
+
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <!-- Google Web Fonts -->
