--- a/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
@@ -105,21 +105,21 @@
 
     <footer class="border-top text-muted">
         <div class="col-12 d-flex justify-content-center">
-            <div class="row col-8">
-                <div class="col-lg-4 col-12 d-flex justify-content-center align-items-center mt-5">
-                    <img src="/img/sdc.png" class="img-fluid">
+            <div class="row col-12">
+                <div class="col-lg-4 col-sm-4 col-4 d-flex justify-content-center align-items-center my-2">
+                    <img style="width:9.5rem" src="/img/sdc.png" class="img-fluid">
                 </div>
-                <div class="col-lg-4 col-12 d-flex justify-content-center align-items-center my-2">
+                <div class="col-lg-4 col-sm-4 col-4 d-flex justify-content-center align-items-center my-2">
 
                     <img src="/img/logo_taoba_1.png" class="img-fluid">
                 </div>
-                <div class="col-lg-4 col-12 d-flex justify-content-center align-items-center my-2">
-                    <img src="/img/UNDP.png" class="img-fluid">
+                <div class="col-lg-4 col-sm-4 col-4 d-flex justify-content-center align-items-center my-2">
+                    <img class="UNDPLOGO" src="/img/UNDP.png" class="img-fluid">
                 </div>
             </div>
         </div>
         <div class="container col-12 px-2">
-            <p>
+            <p style="font-size:0.8rem">
                 პორტალი შექმნილია გაეროს განვითარების პროგრამისა და შვეიცარიის მთავრობის ხელშეწყობით.
                 მის შინაარსზე სრულად პასუხისმგებელია ახალგაზრდული  ქსელი "თაობა".  პორტალის  შინაარსი შესაძლოა არ
                 გამოხატავდეს გაეროს განვითარების პროგრამისა და შვეიცარიის მთავრობის თვალსაზრისს.
