--- a/src/Hackathon_CV_Portal.Web/wwwroot/css/site.css
+++ b/src/Hackathon_CV_Portal.Web/wwwroot/css/site.css
@@ -322,6 +322,18 @@ section h3 {
     }
 }
 
+@media (max-width: 500px) {
+    .UNDPLOGO {
+        width:30%;
+    }
+}
+
+@media (min-width: 500px) {
+    .UNDPLOGO {
+        width: 3rem;
+    }
+}
+
 #imgTest img {
     width: 20rem;
 }
